# diploma

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
ci/dev/: .env.dist  README.MD  docker-compose.yml
ci/dev/docker/backend/: Dockerfile
ci/dev/docker/backend/scripts/: docker-entrypoint.sh
src/config/: celery.py  settings.py  urls.py
src/documents_workers/: comparator.py  delta_converter.py  merger.py  utils.py  visualizer.py
src/repositories/: forms.py  models.py  urls.py  utils.py  views.py
src/repositories/migrations/: 0001_initial.py
src/static/scripts/: script.js
src/static/styles/: main.css
src/templates/base/: base.html  header.html
src/templates/repositories/: commit_create.html  commit_details.html  commits.html  compare.html  create.html  merge.html  merge_details.html  repositories.html  repository.html  settings.html
src/templates/users/: login.html  register.html
src/users/: urls.py  views.py
src/users/migrations/: 0001_initial.py
test_pdf2docx/: test.py
test_pdf2docx/output/001/: iteration_1.docx  iteration_10.docx  iteration_2.docx  iteration_3.docx  iteration_4.docx  iteration_5.docx  iteration_6.docx  iteration_7.docx  iteration_8.docx  iteration_9.docx
test_pdf2docx/output/002/: iteration_1.docx  iteration_10.docx  iteration_2.docx  iteration_3.docx  iteration_4.docx  iteration_5.docx  iteration_6.docx  iteration_7.docx  iteration_8.docx  iteration_9.docx
test_pdf2docx/output/003/: iteration_1.docx  iteration_10.docx  iteration_2.docx  iteration_3.docx  iteration_4.docx  iteration_5.docx  iteration_6.docx  iteration_7.docx  iteration_8.docx  iteration_9.docx
test_pdf2docx/output/004/: iteration_1.docx  iteration_10.docx  iteration_2.docx  iteration_3.docx  iteration_4.docx  iteration_5.docx  iteration_6.docx  iteration_7.docx  iteration_8.docx  iteration_9.docx
test_pdf2docx/output/005/: iteration_1.docx  iteration_10.docx  iteration_2.docx  iteration_3.docx  iteration_4.docx  iteration_5.docx  iteration_6.docx  iteration_7.docx  iteration_8.docx  iteration_9.docx
test_pdf2docx/output/006/: iteration_1.docx  iteration_10.docx  iteration_2.docx  iteration_3.docx  iteration_4.docx  iteration_5.docx  iteration_6.docx  iteration_7.docx  iteration_8.docx  iteration_9.docx
test_pdf2docx/output/007/: iteration_1.docx  iteration_10.docx  iteration_2.docx  iteration_3.docx  iteration_4.docx  iteration_5.docx  iteration_6.docx  iteration_7.docx  iteration_8.docx  iteration_9.docx
test_pdf2docx/output/008/: iteration_1.docx  iteration_10.docx  iteration_2.docx  iteration_3.docx  iteration_4.docx  iteration_5.docx  iteration_6.docx  iteration_7.docx  iteration_8.docx  iteration_9.docx
test_pdf2docx/output/009/: iteration_1.docx  iteration_10.docx  iteration_2.docx  iteration_3.docx  iteration_4.docx  iteration_5.docx  iteration_6.docx  iteration_7.docx  iteration_8.docx  iteration_9.docx
test_pdf2docx/output/010/: iteration_1.docx  iteration_10.docx  iteration_2.docx  iteration_3.docx  iteration_4.docx  iteration_5.docx  iteration_6.docx  iteration_7.docx  iteration_8.docx  iteration_9.docx
