[tool.poetry]
name = "diploma"
version = "0.1.0"
description = ""
authors = ["polyarniik <rus.safiullin.01@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.1"
djangorestframework = "^3.14.0"
django-environ = "^0.9.0"
celery = "^5.2.7"
pre-commit = "^2.20.0"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
flake8 = "^5.0.4"
flake8-django = "^1.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
extend-exclude = '''
    /(
        \.git
      | \.venv
      | build
      | dist
    )
'''
line-length = 120
target-version=['py310']
